# nkicap

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: black.yml  ci.yml  test_ci.yml
data/: README.md  cap.json  cap_gradient_space.tsv  mriq_labels.tsv
data/enhanced_nki/: README.md  desg.tsv  participants.tsv
data/hcp/: hcp_embed_1-10_Schaefer1000_7Networks.txt
data/parcellations/: README.md  Schaefer2018_1000Parcels_7Networks_order.lut  Tian_Subcortex_S4_3T_label.txt
nkicap/: __init__.py  dataset.py  gradient.py  make_dataset.py  plotting.py  transition_matrix.py  utils.py
nkicap/tests/: test_dataset.py  test_plotting.py  test_transition_matrix.py  test_utils.py  utils.py
nkicap/tests/data/: file.tsv  file_csv.csv  mriq.tsv
notebooks/: CAP-in-gradient-space.ipynb
results/cap/: multivariate_results.csv  univeriate_report.txt
results/cap_diff/: multivariate_results.csv  univeriate.txt  univeriate_report.txt
results/mmr/cap_diff/: multivariate_results.csv
results/mmr/cap_dur/: multivariate_results.csv  univeriate_report.txt
results/mmr/cap_occ/: multivariate_results.csv
results/transition_matrix/: cap_thoughts_mode_1.tsv  cap_thoughts_mode_10.tsv  cap_thoughts_mode_11.tsv  cap_thoughts_mode_12.tsv  cap_thoughts_mode_13.tsv  cap_thoughts_mode_14.tsv  cap_thoughts_mode_15.tsv  cap_thoughts_mode_16.tsv  cap_thoughts_mode_2.tsv  cap_thoughts_mode_3.tsv  cap_thoughts_mode_4.tsv  cap_thoughts_mode_5.tsv  cap_thoughts_mode_6.tsv  cap_thoughts_mode_7.tsv  cap_thoughts_mode_8.tsv  cap_thoughts_mode_9.tsv  cap_transition_mode_1.tsv  cap_transition_mode_10.tsv  cap_transition_mode_11.tsv  cap_transition_mode_12.tsv  cap_transition_mode_13.tsv  cap_transition_mode_14.tsv  cap_transition_mode_15.tsv  cap_transition_mode_16.tsv  cap_transition_mode_2.tsv  cap_transition_mode_3.tsv  cap_transition_mode_4.tsv  cap_transition_mode_5.tsv  cap_transition_mode_6.tsv  cap_transition_mode_7.tsv  cap_transition_mode_8.tsv  cap_transition_mode_9.tsv
