[tool.poetry]
name = "nkicap"
version = "0.1.0"
description = "cool project"
authors = ["Hao-Ting Wang <htwangtw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.6.1"
nilearn = "^0.7.1"
cca-zoo = "^1.1.22"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"
ipython = "^7.21.0"
brainspace = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
Sphinx = "^3.5.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
^/(
  (
      \.eggs
    | \.git*
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
)
'''