[tool.poetry]
name = "nkicap"
version = "0.1.0"
description = "cool project"
authors = ["Hao-Ting Wang <htwangtw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.6.1"
nilearn = "^0.7.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"
ipython = "^7.21.0"
brainspace = "^0.1.1"
wordcloud = "^1.8.1"
fonttools = "^4.22.0"
dash = "^1.20.0"
jupyter = "^1.0.0"
ipykernel = "^5.5.3"
jupyter-dash = "^0.4.0"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
pytest-cov = "^2.11.1"
flake8 = "^3.9.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
^/(
  (
      \.eggs
    | \.git*
    | \.datalad
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | setup.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88